--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -1,15 +1,15 @@
 /* Breakpoint */
-/* mobile first */
-$breakpoint-tablet: 768px;
-$breakpoint-desktop: 1248px;
+/* desktop 우선 */
+$breakpoint-mobile: 768px;
+$breakpoint-tablet: 1248px;
 
-@mixin tablet {
-  @media (min-width: #{$breakpoint-tablet}) {
+@mixin mobile {
+  @media (max-width: #{$breakpoint-mobile}) {
     @content;
   }
 }
-@mixin desktop {
-  @media (min-width: #{$breakpoint-desktop}) {
+@mixin tablet {
+  @media (max-width: #{$breakpoint-tablet}) {
     @content;
   }
 }
