--- a/src/pages/PostDetail/PostCard.module.scss
+++ b/src/pages/PostDetail/PostCard.module.scss
@@ -29,13 +29,12 @@ $profile: 56px;
 }
 
 .cardProfile {
-  width: $profile;
-  height: $profile;
   border-radius: 100px;
   margin-bottom: $size-md;
 }
-
-.cardProfileImage {
+.profileImage {
+  width: $profile;
+  height: $profile;
 }
 
 .cardWriterInfo {
