feat: tablet/mobile UI 추가

--- a/src/pages/PostNav/AuthorCount.module.scss
+++ b/src/pages/PostNav/AuthorCount.module.scss
@@ -3,6 +3,11 @@
   @include flex-center;
 }
 
+.authorContainer {
+  @include tablet {
+    display: none;
+  }
+}
 .profileWrapper {
   display: flex;
 }
