--- a/src/pages/PostNav/EmojiBar.module.scss
+++ b/src/pages/PostNav/EmojiBar.module.scss
@@ -20,6 +20,12 @@
   color: #fff;
   background-color: rgba($color: #000000, $alpha: 0.54);
   border-radius: 32px;
+
+  @include mobile {
+    font-size: $font-sm;
+    width: 53px;
+    height: 28px;
+  }
 }
 
 .arrow {
@@ -31,6 +37,7 @@
   padding: 0;
   transition: transform 0.3s ease;
 }
+
 .arrow.rotate {
   transform: rotate(180deg);
 }
@@ -48,4 +55,13 @@
   top: 50px;
   left: -70px;
   z-index: 10;
+
+  @include tablet {
+    grid-template-columns: repeat(3, 1fr);
+    left: 0;
+  }
+
+  @include mobile {
+    padding: 16px;
+  }
 }
