feat: 카드 리스트 간격 조정 및 createdAt 날짜를 YYYY-MM-DD 형식으로 포맷

--- a/src/pages/PostDetail/AddMessageButton.module.scss
+++ b/src/pages/PostDetail/AddMessageButton.module.scss
@@ -6,7 +6,7 @@ $button-size: 3.5rem;
   font-size: $font-2xl;
   color: $white;
   background-color: $gray600;
-  border-radius: 100px;
+  border-radius: 6.25rem;
   border-style: none;
   cursor: pointer;
 }
