--- a/src/pages/PostDetail/PostCardList.module.scss
+++ b/src/pages/PostDetail/PostCardList.module.scss
@@ -24,5 +24,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 24px;
-  padding: 113px 360px;
+  padding: 113px 0;
+  width: 1200px;
+  margin: 0 auto;
 }
