--- a/src/styles/_token.scss
+++ b/src/styles/_token.scss
@@ -43,23 +43,31 @@ $error: #dc3a3a;
 $surface: #f6f8ff;
 
 /* Font Size */
-$font-xs: 0.75rem /* 12px */;
-$font-sm: 0.875rem /* 14px */;
-$font-md: 1rem /* 16px base */;
-$font-lg: 1.125rem /* 18px */;
-$font-xl: 1.25rem /* 20px */;
-$font-2xl: 1.5rem /* 24px */;
-$font-3xl: 1.75rem /* 28px */;
+$font-xs: 0.75rem; /* 12px */
+$font-sm: 0.875rem; /* 14px */
+$font-md: 1rem; /* 16px base */
+$font-lg: 1.125rem; /* 18px */
+$font-xl: 1.25rem; /* 20px */
+$font-2xl: 1.5rem; /* 24px */
+$font-3xl: 1.75rem; /* 28px */
 
 /* Font Family */
 $font-family-primary: 'pretendard';
 
 /* Spacing */
-$size-xs: 5px;
-$size-sm: 10px;
-$size-md: 16px;
-$size-lg: 24px;
-$size-xl: 32px;
-$size-2xl: 48px;
-$size-3xl: 64px;
-$size-4xl: 128px;
+$size-xs: 0.3125rem; /* 5px */
+$size-sm: 0.625rem; /* 10px */
+$size-md: 1rem; /* 16px */
+$size-lg: 1.5rem; /* 24px */
+$size-xl: 2rem; /* 32px */
+$size-2xl: 3rem; /* 48px */
+$size-3xl: 4rem; /* 64px */
+$size-4xl: 8rem; /* 128px */
+
+/* Border Radius */
+$radius-sm: 0.25rem; /* 4px */
+$radius-md: 0.5rem; /* 8px */
+$radius-lg: 1rem; /* 16px */
+$radius-xl: 1.5rem; /* 24px */
+$radius-2xl: 2rem; /* 32px */
+$radius-full: 50%; /* 원형 */
