feat: px to rem scss util 함수 추가

--- a/src/styles/_util.scss
+++ b/src/styles/_util.scss
@@ -1,5 +1,16 @@
+@use 'sass:math';
+
 @mixin flex-center {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+/* px to rem */
+$base-rem-size: 16px;
+@function remove-unit($value) {
+  @return math.div($value, ($value * 0 + 1));
+}
+@function rem($px, $base: $base-rem-size) {
+  @return (remove-unit(math.div($px, $base))) * 1rem;
 }
