--- a/src/components/layout/Header.module.scss
+++ b/src/components/layout/Header.module.scss
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: space-between;
   margin: $size-sm 0;
-  max-width: 1200px;
+  max-width: rem(1200px);
   width: 100%;
 }
 @include tablet {
@@ -27,10 +27,10 @@
 @include mobile {
   .nav {
     width: 100%;
-    margin: $size-sm 20px;
+    margin: $size-sm rem(20px);
   }
 }
 .logo {
-  width: 106px;
-  height: 42px;
+  width: rem(106px);
+  height: rem(42px);
 }
