--- a/src/components/PostNav/AuthorCount.module.scss
+++ b/src/components/PostNav/AuthorCount.module.scss
@@ -13,22 +13,22 @@
 }
 
 .author {
-  width: 28px;
-  height: 28px;
+  width: rem(28px);
+  height: rem(28px);
   border: 1px solid #fff;
   border-radius: 50%;
   overflow: hidden;
-  margin-left: -8px;
+  margin-left: -0.5rem;
 
   &RestCount {
     background-color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 12px;
+    font-size: rem(12px);
     font-weight: 600;
     color: #484848;
-    border: 1px solid #e3e3e3;
+    border: rem(1px) solid #e3e3e3;
   }
 }
 
@@ -36,19 +36,19 @@
   font-size: $font-lg;
   font-weight: 400;
   color: $gray900;
-  margin-left: 11px;
+  margin-left: rem(11px);
 }
 
 .divider {
-  width: 1px;
-  height: 20px;
+  width: rem(1px);
+  height: rem(20px);
   background-color: $gray200;
 
   &Count {
-    margin: 0 28px;
+    margin: 0 rem(28px);
   }
 
   &Emoji {
-    margin: 0 13px;
+    margin: 0 rem(13px);
   }
 }
