--- a/src/components/PostNav/EmojiAddButton.module.scss
+++ b/src/components/PostNav/EmojiAddButton.module.scss
@@ -5,16 +5,16 @@
 //공통
 .btn {
   @include flex-center;
-  height: 36px;
+  height: rem(36px);
   background-color: transparent;
-  border: 1px solid $gray300;
-  border-radius: 6px;
+  border: rem(1px) solid $gray300;
+  border-radius: rem(6px);
   margin: 0;
-  padding: 17px 8px;
+  padding: rem(17px) rem(8px);
 }
 
 //공통
 .icon {
-  width: 21px;
-  height: 21px;
+  width: rem(21px);
+  height: rem(21px);
 }
