--- a/src/components/PostNav/EmojiBar.module.scss
+++ b/src/components/PostNav/EmojiBar.module.scss
@@ -6,35 +6,35 @@
 
 .iconContainer {
   position: relative;
-  margin-right: 8px;
+  margin-right: 0.5rem;
 }
 
 .iconWrapper {
-  gap: 8px;
+  gap: 0.5rem;
 
   &Margin {
-    margin-right: 28px;
+    margin-right: rem(28px);
   }
 }
 
 .icon {
-  width: 63px;
-  height: 36px;
+  width: rem(63px);
+  height: rem(36px);
   font-size: $font-md;
   color: #fff;
   background-color: rgba($color: #000000, $alpha: 0.54);
-  border-radius: 32px;
+  border-radius: 2rem;
 
   @include mobile {
     font-size: $font-sm;
-    width: 53px;
-    height: 28px;
+    width: rem(53px);
+    height: rem(28px);
   }
 }
 
 .arrow {
-  width: 36px;
-  height: 36px;
+  width: rem(36px);
+  height: rem(36px);
   border: none;
   background: transparent url('@/assets/images/arrow.png') center / 12px
     no-repeat;
@@ -51,13 +51,13 @@
   grid-template-columns: repeat(4, 1fr);
   position: absolute;
   flex-wrap: wrap;
-  border: 1px solid rgba($color: #000, $alpha: 0.3);
+  border: rem(1px) solid rgba($color: #000, $alpha: 0.3);
   background-color: #fff;
-  padding: 24px;
-  border-radius: 9px;
-  gap: 8px;
-  top: 50px;
-  left: -70px;
+  padding: rem(24px);
+  border-radius: rem(9px);
+  gap: 0.5rem;
+  top: rem(50px);
+  left: rem(-70px);
   z-index: 10;
 
   @include tablet {
@@ -66,6 +66,6 @@
   }
 
   @include mobile {
-    padding: 16px;
+    padding: 1rem;
   }
 }
