--- a/src/components/PostNav/ShareButton.module.scss
+++ b/src/components/PostNav/ShareButton.module.scss
@@ -3,21 +3,21 @@
 }
 
 .shareBox {
-  width: 140px;
-  height: 120px;
+  width: rem(140px);
+  height: rem(120px);
   position: absolute;
   background-color: #fff;
-  border: 1px solid $gray300;
-  border-radius: 8px;
-  top: 50px;
+  border: rem(1px) solid $gray300;
+  border-radius: 0.5rem;
+  top: rem(50px);
   right: 0;
   z-index: 20;
-  padding: 10px 0;
+  padding: rem(10px) 0;
 
   > li {
     display: block;
     text-align: center;
-    line-height: 50px;
+    line-height: rem(50px);
 
     &:hover {
       background-color: $gray100;
