--- a/src/components/PostNav/Toast.module.scss
+++ b/src/components/PostNav/Toast.module.scss
@@ -3,18 +3,18 @@
   justify-content: space-between;
   align-items: center;
   position: fixed;
-  max-width: 524px;
+  max-width: rem(524px);
   width: 100%;
   background-color: rgba($color: #000000, $alpha: 0.8);
-  border-radius: 8px;
-  padding: 20px 30px;
-  bottom: 70px;
+  border-radius: 0.5;
+  padding: rem(20px) rem(30px);
+  bottom: rem(70px);
   left: 50%;
   z-index: 20;
   transform: translateX(-50%);
 
   @include mobile {
-    max-width: 320px;
+    max-width: rem(320px);
   }
 
   > div {
@@ -22,21 +22,21 @@
   }
 
   &Icon {
-    width: 24px;
-    height: 24px;
+    width: rem(24px);
+    height: rem(24px);
   }
 
   &Copy {
     font-size: $font-md;
     font-weight: 400;
     color: #fff;
-    margin-left: 12px;
+    margin-left: rem(12px);
   }
 }
 
 .closeIcon {
-  width: 16px;
-  height: 16px;
+  width: 1rem;
+  height: 1rem;
   padding: 0;
   margin: 0;
   border: none;
