feat: 유틸/토큰 기반 사이즈 수정 및 무한 스크롤용 mock구조 개선/ 페이징 함수 추가

--- a/src/pages/PostDetail/AddMessageButton.module.scss
+++ b/src/pages/PostDetail/AddMessageButton.module.scss
@@ -1,4 +1,4 @@
-$button-size: 3.5rem;
+$button-size: rem(56px);
 
 .addCardBox {
   width: $button-size;
@@ -6,7 +6,7 @@ $button-size: 3.5rem;
   font-size: $font-2xl;
   color: $white;
   background-color: $gray600;
-  border-radius: 6.25rem;
+  border-radius: $radius-full;
   border-style: none;
   cursor: pointer;
 }
