feat: Toast component 완료, reset.scss를 따로 뺴서, main.jsx에 import하는 것으로 수정

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -112,6 +112,11 @@ ol,
 ul {
   list-style: none;
 }
+button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
 blockquote,
 q {
   quotes: none;
