--- a/src/layouts/Layout.module.scss
+++ b/src/layouts/Layout.module.scss
@@ -1,7 +1,7 @@
 .container {
   margin: $size-md auto;
   position: relative;
-  flex-grow: 1;
+  font-family: $font-family-primary;
 }
 @include mobile {
   .container {
