--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -104,6 +104,7 @@ menu,
 nav,
 section {
   display: block;
+  font-family: 'Pretendard';
 }
 body {
   line-height: 1;
@@ -113,6 +114,7 @@ ul {
   list-style: none;
 }
 button {
+  font-family: 'Pretendard';
   background: none;
   border: none;
   cursor: pointer;
