fix: 토큰스타일로 수정

--- a/src/components/PostNav/ShareButton.module.scss
+++ b/src/components/PostNav/ShareButton.module.scss
@@ -6,7 +6,7 @@
   width: rem(140px);
   height: rem(120px);
   position: absolute;
-  background-color: #fff;
+  background-color: $white;
   border: rem(1px) solid $gray300;
   border-radius: 0.5rem;
   top: rem(50px);
