--- a/src/components/PostNav/AuthorCount.module.scss
+++ b/src/components/PostNav/AuthorCount.module.scss
@@ -15,13 +15,13 @@
 .author {
   width: rem(28px);
   height: rem(28px);
-  border: 1px solid #fff;
+  border: 1px solid $white;
   border-radius: 50%;
   overflow: hidden;
   margin-left: -0.5rem;
 
   &RestCount {
-    background-color: #fff;
+    background-color: $white;
     display: flex;
     align-items: center;
     justify-content: center;
