--- a/src/components/PostNav/EmojiBar.module.scss
+++ b/src/components/PostNav/EmojiBar.module.scss
@@ -21,8 +21,8 @@
   width: rem(63px);
   height: rem(36px);
   font-size: $font-md;
-  color: #fff;
-  background-color: rgba($color: #000000, $alpha: 0.54);
+  color: $white;
+  background-color: rgba($color: $black, $alpha: 0.54);
   border-radius: 2rem;
 
   @include mobile {
@@ -52,9 +52,9 @@
   grid-template-columns: repeat(4, 1fr);
   position: absolute;
   flex-wrap: wrap;
-  border: rem(1px) solid rgba($color: #000, $alpha: 0.3);
-  background-color: #fff;
-  padding: rem(24px);
+  border: rem(1px) solid rgba($color: $black, $alpha: 0.3);
+  background-color: $white;
+  padding: $size-lg;
   border-radius: rem(9px);
   gap: 0.5rem;
   top: rem(50px);
