--- a/src/components/PostNav/index.module.scss
+++ b/src/components/PostNav/index.module.scss
@@ -2,14 +2,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fff;
+  background-color: $white;
   max-width: rem(1200px);
   width: 100%;
   height: rem(68px);
   margin: 0 auto;
 
   @include tablet {
-    padding: 0 rem(24px);
+    padding: 0 $size-lg;
   }
   @include mobile {
     display: block;
