fix: button disabled시에 focus, hover 색상 적용되는 문제 수정

--- a/src/components/ui/Button.module.scss
+++ b/src/components/ui/Button.module.scss
@@ -20,10 +20,10 @@
   &:disabled {
     background-color: $gray300;
   }
-  &:hover {
+  &:enabled:hover {
     background-color: $purple700;
   }
-  &:active {
+  &:enabled:active {
     background-color: $purple800;
   }
 }
