feat: theme 설정 with scss + 몇개의 파일의 css color 수정

--- a/src/components/PostNav/AuthorCount.module.scss
+++ b/src/components/PostNav/AuthorCount.module.scss
@@ -35,7 +35,7 @@
 .allCountAuthor {
   font-size: $font-lg;
   font-weight: 400;
-  color: $gray900;
+  color: var(--color-gray-text);
   margin-left: rem(11px);
 }
 
