--- a/src/pages/PostDetail/PostCard.module.scss
+++ b/src/pages/PostDetail/PostCard.module.scss
@@ -11,7 +11,7 @@ $profile: rem(56px);
   @include flex-center;
   width: 100%;
   height: $card-height;
-  background-color: $white;
+  background-color: var(--color-default-background);
   border-radius: $radius-lg;
 }
 
@@ -19,7 +19,7 @@ $profile: rem(56px);
   @include column;
   width: 100%;
   height: $card-height;
-  background-color: $white;
+  background-color: var(--color-default-background);
   border-radius: 1rem;
   padding: rem(28px) rem(24px) rem(24px);
 }
@@ -70,7 +70,7 @@ $profile: rem(56px);
   font-size: $font-lg;
   font-weight: 400;
   line-height: $font-3xl;
-  color: $gray600;
+  color: var(--color-gray-text);
   margin-top: $size-md;
   margin-bottom: $size-md;
 }
