feat: dark mode 기능 완성 + fonts 폴더구조 변경, 기존 로고를 이미지에서 폰트로 변경

--- a/src/components/layout/DarkModeToggle.module.scss
+++ b/src/components/layout/DarkModeToggle.module.scss
@@ -3,6 +3,11 @@
   border-radius: rem(6px);
   padding: rem(4px) $size-md;
   color: $gray900;
+  svg {
+    path {
+      fill: var(--color-default-text);
+    }
+  }
 }
 
 .toggle-input {
