--- a/src/styles/_token.scss
+++ b/src/styles/_token.scss
@@ -54,7 +54,7 @@ $font-3xl: 1.75rem; /* 28px */
 
 /* Font Family */
 $font-family-primary: 'Pretendard';
-
+$font-family-logo: 'Poppins';
 /* Spacing */
 $size-xs: 0.3125rem; /* 5px */
 $size-sm: 0.625rem; /* 10px */
