--- a/src/components/layout/Header.module.scss
+++ b/src/components/layout/Header.module.scss
@@ -8,9 +8,7 @@
   border-bottom: 1px solid #ededed;
   width: 100%;
   @include tablet {
-    .header {
-      justify-content: center;
-    }
+    justify-content: center;
   }
 }
 .nav {
@@ -21,21 +19,24 @@
   max-width: rem(1200px);
   width: 100%;
   @include tablet {
-    .nav {
-      width: 100%;
-      margin: $size-sm $size-lg;
-    }
+    width: 100%;
+    margin: $size-sm $size-lg;
   }
   @include mobile {
-    .nav {
-      width: 100%;
-      margin: $size-sm rem(20px);
-    }
+    width: 100%;
+    margin: $size-sm rem(20px);
   }
 }
-.logo {
-  width: rem(106px);
-  height: rem(42px);
+.logo-wrapper {
+  @include flex-center;
+  gap: rem(8px);
+}
+.logo-title {
+  font-family: $font-family-logo;
+  color: var(--color-gray-text);
+  font-weight: 500;
+  font-size: $font-xl;
+  text-decoration: none;
 }
 .buttons-wrapper {
   @include flex-center;
