--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -6,50 +6,56 @@
   }
 }
 @include font-face(
+  'Poppins',
+  '@/assets/fonts/Poppins/Poppins-Bold.woff',
+  700,
+  'woff'
+);
+@include font-face(
   'Pretendard',
-  '@/assets/fonts/Pretendard-Thin.woff2',
+  '@/assets/fonts/Pretendard/Pretendard-Thin.woff2',
   100,
   'woff2'
 );
 @include font-face(
   'Pretendard',
-  '@/assets/fonts/Pretendard-ExtraLight.woff2',
+  '@/assets/fonts/Pretendard/Pretendard-ExtraLight.woff2',
   200,
   'woff2'
 );
 @include font-face(
   'Pretendard',
-  '@/assets/fonts/Pretendard-Light.woff2',
+  '@/assets/fonts/Pretendard/Pretendard-Light.woff2',
   300,
   'woff2'
 );
 @include font-face(
   'Pretendard',
-  '@/assets/fonts/Pretendard-Medium.woff2',
+  '@/assets/fonts/Pretendard/Pretendard-Medium.woff2',
   400,
   'woff2'
 );
 @include font-face(
   'Pretendard',
-  '@/assets/fonts/Pretendard-Regular.woff2',
+  '@/assets/fonts/Pretendard/Pretendard-Regular.woff2',
   500,
   'woff2'
 );
 @include font-face(
   'Pretendard',
-  '@/assets/fonts/Pretendard-SemiBold.woff2',
+  '@/assets/fonts/Pretendard/Pretendard-SemiBold.woff2',
   600,
   'woff2'
 );
 @include font-face(
   'Pretendard',
-  '@/assets/fonts/Pretendard-Bold.woff2',
+  '@/assets/fonts/Pretendard/Pretendard-Bold.woff2',
   700,
   'woff2'
 );
 @include font-face(
   'Pretendard',
-  '@/assets/fonts/Pretendard-ExtraBold.woff2',
+  '@/assets/fonts/Pretendard/Pretendard-ExtraBold.woff2',
   800,
   'woff2'
 );
