--- a/src/components/layout/Header.module.scss
+++ b/src/components/layout/Header.module.scss
@@ -40,7 +40,7 @@
 }
 .buttons-wrapper {
   @include flex-center;
-  gap: $size-sm;
+  gap: $size-lg;
 }
 .button-outlined {
   background-color: $white;
