feat : 메시지 모달 상세 보기 추가 및 카드/모달 UI 통합 구조 구현

--- a/src/pages/PostDetail/CardDetail.module.scss
+++ b/src/pages/PostDetail/CardDetail.module.scss
@@ -24,6 +24,7 @@ $date: rem(24px);
   background-color: $white;
   border-radius: 1rem;
   padding: rem(28px) rem(24px) rem(24px);
+  cursor: pointer;
 }
 
 .cardTopSection {
