--- a/src/pages/PostDetail/CardDetail.module.scss
+++ b/src/pages/PostDetail/CardDetail.module.scss
@@ -1,17 +1,9 @@
-$card-width: rem(384px);
-$card-height: rem(280px);
-$profile: rem(56px);
-$date: rem(24px);
-
-@mixin column {
-  display: column;
-  align-items: center;
-}
+@import 'CardDetailShared.module.scss';
 
 .cardBoxAdd {
   @include flex-center;
   width: 100%;
-  height: $card-height;
+  height: rem(280px);
   background-color: $white;
   border-radius: $radius-lg;
 }
@@ -20,74 +12,41 @@ $date: rem(24px);
   @include column;
   position: relative;
   width: 100%;
-  height: $card-height;
+  height: rem(280px);
   background-color: $white;
-  border-radius: 1rem;
+  border-radius: $radius-lg;
   padding: rem(28px) rem(24px) rem(24px);
   cursor: pointer;
 }
 
 .cardTopSection {
-  display: flex;
-  gap: 14px;
+  @include cardTopSection;
 }
 
 .cardProfile {
-  border-radius: 100px;
-  margin-bottom: $size-md;
-}
-.profileImage {
-  width: $profile;
-  height: $profile;
-  border-radius: $radius-full;
-}
-
-.cardWriterInfo {
+  @include cardProfile;
 }
 
 .title {
-  margin-bottom: rem(6px);
-  gap: rem(6px);
+  @include title;
 }
 
 .fromLabel {
-  font-size: $font-xl;
-  font-weight: 400;
+  @include fromLabel;
 }
 
 .writerName {
-  font-size: $font-xl;
-  font-weight: 700;
-}
-
-.badge {
-  width: rem(41px);
-  height: rem(20px);
-  border-radius: $radius-sm;
+  @include writerName;
 }
 
 .Hr {
-  border: none;
-  border-top: 1px solid $gray200;
+  @include Hr;
 }
 
 .cardContent {
-  width: rem(336px);
-  height: rem(106px);
-  font-size: $font-lg;
-  font-weight: 400;
-  line-height: $font-3xl;
-  color: $gray600;
-  margin-top: $size-md;
-  margin-bottom: $size-md;
-  overflow: hidden;
+  @include cardContent(rem(336px), rem(106px));
 }
 
 .cardDate {
-  position: absolute;
-  left: $date;
-  bottom: $date;
-  font-size: $font-xs;
-  font-weight: 400;
-  color: $gray400;
+  @include cardDate($bottom: rem(24), $left: rem(24px));
 }
