feat: dark mode (#45)
* feat: dark mode toggle 기본 UI
* feat: theme 설정 with scss + 몇개의 파일의 css color 수정
* feat: dark mode 기능 완성 + fonts 폴더구조 변경, 기존 로고를 이미지에서 폰트로 변경
* feat: dark mode toggle ui 업데이트

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -83,7 +83,8 @@ summary,
 time,
 mark,
 audio,
-video {
+video,
+input {
   margin: 0;
   padding: 0;
   border: 0;
@@ -111,6 +112,13 @@ body {
 ol,
 ul {
   list-style: none;
+}
+a,
+ a:hover,
+a:active,
+a:visited {
+  text-decoration: none;
+  outline: none;
 }
 button {
   font-family: 'Pretendard';
