--- a/src/styles/_token.scss
+++ b/src/styles/_token.scss
@@ -39,6 +39,7 @@ $gray900: #181818;
 
 $white: #ffffff;
 $black: #000000;
+$dark: #292b37;
 $error: #dc3a3a;
 $surface: #f6f8ff;
 
@@ -53,7 +54,7 @@ $font-3xl: 1.75rem; /* 28px */
 
 /* Font Family */
 $font-family-primary: 'Pretendard';
-
+$font-family-logo: 'Poppins';
 /* Spacing */
 $size-xs: 0.3125rem; /* 5px */
 $size-sm: 0.625rem; /* 10px */
