feat: Dark mode toggle에 motion 적용

--- a/src/components/layout/Header.module.scss
+++ b/src/components/layout/Header.module.scss
@@ -7,6 +7,7 @@
   z-index: 999;
   border-bottom: 1px solid #ededed;
   width: 100%;
+  height: rem(60px);
   @include tablet {
     justify-content: center;
   }
