--- a/src/components/PostNav/index.module.scss
+++ b/src/components/PostNav/index.module.scss
@@ -6,13 +6,16 @@
   max-width: rem(1200px);
   width: 100%;
   height: rem(68px);
+  height: rem(68px);
   margin: 0 auto;
 
   @include tablet {
     padding: 0 $size-lg;
+    padding: 0 $size-lg;
   }
   @include mobile {
     display: block;
+    height: rem(104px);
     height: rem(104px);
     padding: 0;
   }
@@ -27,6 +30,9 @@
     line-height: rem(52px);
     padding: 0 rem(20px);
     border-bottom: rem(1px) solid $gray200;
+    line-height: rem(52px);
+    padding: 0 rem(20px);
+    border-bottom: rem(1px) solid $gray200;
   }
 }
 
@@ -34,6 +40,7 @@
   @include flex-center;
 
   @include mobile {
+    height: rem(52px);
     height: rem(52px);
   }
 }
