--- a/src/pages/list/ListPage.module.scss
+++ b/src/pages/list/ListPage.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
-  max-width: 1200px;
+  max-width: rem(1200px);
   margin: 0 auto;
-  padding: 50px;
+  padding: rem(50px);
 
   display: flex;
   flex-direction: column;
