--- a/src/pages/list/SlideButton.module.scss
+++ b/src/pages/list/SlideButton.module.scss
@@ -1,6 +1,6 @@
 .button {
-  width: 40px;
-  height: 40px;
+  width: rem(40px);
+  height: rem(40px);
   border-radius: 50%;
 
   background-color: rgba(255, 255, 255, 0.9);
