--- a/src/pages/message/FontSelector.module.scss
+++ b/src/pages/message/FontSelector.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: rem(12px);
 }
 
 .label {
@@ -13,7 +13,7 @@
 
 .select {
   width: 100%;
-  padding: 12px $size-md;
+  padding: rem(12px) $size-md;
   border: 1px solid $gray300;
   border-radius: $radius-md;
   font-size: $font-md;
