--- a/src/pages/Home/BottomCTA.scss
+++ b/src/pages/Home/BottomCTA.scss
@@ -1,9 +1,11 @@
 .bottom-cta {
   width: 100%;
   max-width: 1200px;
-  margin: 60px auto 104px auto; // 위 60px, 아래 104px로 Figma 반영
+  margin: 60px auto 104px auto; // 위 60px, 아래 104px
   display: flex;
   justify-content: center;
+  padding: 0 60px;
+  box-sizing: border-box;
 
   &__button {
     display: flex;
@@ -16,7 +18,6 @@
     height: 56px;
 
     font-family: 'Pretendard';
-    font-style: normal;
     font-weight: 700;
     font-size: 18px;
     line-height: 28px;
@@ -33,5 +34,38 @@
     &:hover {
       background: #7a26cc;
     }
+  }
+}
+
+// PC: 너비 줄어들면 좌우 padding 24px 고정
+@media (max-width: 1247px) {
+  .bottom-cta {
+    padding: 0 24px;
+  }
+}
+
+// Tablet: 버튼 width 줄어들기 시작
+@media (max-width: 1023px) {
+  .bottom-cta__button {
+    width: 240px;
+    height: 52px;
+    font-size: 16px;
+    line-height: 26px;
+  }
+}
+
+// Mobile: 버튼 꽉 채우고 좌우 여백 유지
+@media (max-width: 767px) {
+  .bottom-cta {
+    padding: 0 24px;
+    display: block; // flex 해제
+  }
+
+  .bottom-cta__button {
+    width: 100%;
+    max-width: 100%;
+    height: 52px;
+    font-size: 16px;
+    line-height: 26px;
   }
 }
