--- a/src/pages/PostDetail/PostCardList.module.scss
+++ b/src/pages/PostDetail/PostCardList.module.scss
@@ -27,4 +27,32 @@
   padding: rem(113px) 0;
   width: rem(1200px);
   margin: 0 auto;
+  position: relative;
+}
+
+.btnEdit {
+  position: absolute;
+  right: 0;
+  top: rem(50px);
+  display: flex;
+  justify-content: space-between;
+  gap: 0.5rem;
+
+  button {
+    width: rem(92px);
+    height: rem(40px);
+  }
+
+  @include tablet {
+    position: fixed;
+    top: auto;
+    bottom: rem(24px);
+    z-index: 50;
+    width: 100%;
+    padding: 0 rem(24px);
+
+    > li {
+      width: 100%;
+    }
+  }
 }
