--- a/src/pages/List/CardItem.module.scss
+++ b/src/pages/List/CardItem.module.scss
@@ -10,13 +10,10 @@
   flex-direction: column;
   justify-content: space-between;
 
-  transition:
-    transform 0.2s ease,
-    box-shadow 0.2s ease;
+  transition: box-shadow 0.2s ease;
   will-change: transform;
 
   &:hover {
-    transform: scale(1.03);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
   }
 }
