feat: background option button을 Motion으로 구현

--- a/src/components/ui/InputField.module.scss
+++ b/src/components/ui/InputField.module.scss
@@ -7,7 +7,7 @@
 .label {
   font-size: $font-2xl;
   font-weight: 700;
-  color: $gray900;
+  color: var(--color-gray-text);
   font-family: $font-family-primary;
 }
 
