--- a/src/pages/Message/ContentEditor.module.scss
+++ b/src/pages/Message/ContentEditor.module.scss
@@ -1,8 +1,7 @@
 .editorWrapper {
   display: flex;
   flex-direction: column;
-  gap: 12px;
-  width: 100%;
+  font-family: $font-family-primary;
 }
 
 .label {
@@ -10,25 +9,111 @@
   font-weight: 700;
   font-family: $font-family-primary;
   color: $gray900;
+  margin-bottom: 12px;
 }
 
-.textarea {
-  width: 100%;
-  padding: $size-sm $size-md;
+.wrapper {
+  width: 720px;
+  height: 260px;
   border: 1px solid $gray300;
-  border-radius: $radius-sm;
-  font-size: $font-md;
-  line-height: 1.5;
-  resize: vertical;
-  color: $gray900;
-  background-color: $white;
+  border-radius: 1px;
+}
 
-  &::placeholder {
-    color: $gray400;
+.toolbar {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 8px;
+  background-color: $gray200;
+  border: none;
+
+  button,
+  select {
+    background: $gray200;
+    border: none;
+    border-radius: 4px;
+    padding: 4px 8px;
+    cursor: pointer;
+    font-size: 14px;
+
+    &:hover {
+      background-color: $purple100;
+      border-color: $purple400;
+    }
+
+    &:focus {
+      outline: none;
+      box-shadow: 0 0 0 2px $purple200;
+    }
   }
 
-  &:focus {
-    border-color: $purple500;
+  select {
+    appearance: none;
+  }
+}
+
+.alignButtons {
+  display: flex;
+  gap: 2px;
+
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4px;
+    width: 32px;
+    height: 32px;
+
+    svg {
+      color: $gray800;
+    }
+
+    &:hover svg {
+      color: $purple500;
+    }
+  }
+}
+
+.editorContentWrapper {
+  min-height: 200px;
+  padding: 12px;
+  background-color: white;
+  cursor: text;
+}
+
+.editorContent {
+  border: none;
+  outline: none;
+  font-size: 16px;
+  line-height: 1.6;
+
+  ul {
+    list-style-type: disc;
+    padding-left: 1.5rem;
+    margin: 0.5rem 0;
+  }
+
+  ol {
+    list-style-type: decimal;
+    padding-left: 1.5rem;
+    margin: 0.5rem 0;
+  }
+
+  li {
+    margin-left: 1rem;
+  }
+
+  p {
+    margin: 0;
+  }
+
+  :focus {
     outline: none;
   }
+}
+
+.emojiWrapper {
+  position: absolute;
+  z-index: 20;
+  margin-top: 8px;
 }
