--- a/src/pages/Message/MessageForm.module.scss
+++ b/src/pages/Message/MessageForm.module.scss
@@ -3,3 +3,14 @@
   flex-direction: column;
   gap: rem(50px);
 }
+
+.buttonGroup {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 24px;
+
+  button {
+    width: 300px;
+  }
+}
