--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -59,3 +59,21 @@
   800,
   'woff2'
 );
+@include font-face(
+  'Noto Sans',
+  '@/assets/fonts/NotoSans/NotoSansKR-Regular.ttf',
+  400,
+  'woff2'
+);
+@include font-face(
+  '나눔명조',
+  '@/assets/fonts/NanumMyeongjo/NanumMyeongjo-Regular.otf',
+  400,
+  'woff'
+);
+@include font-face(
+  '나눔손글씨 손편지체',
+  '@/assets/fonts/NanumSonPyeonJiCe/NanumSonPyeonJiCe-Regular.ttf',
+  400,
+  'woff'
+);
